tests/snapshots/output/apps__create_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo apps create --type shopify --name 'Demo Shop 2' --credentials-file [home]/shop-credentials.json --json
exit: 0
--- stdout ---
{
  "data": {
    "id": "a0000004-0000-4000-8000-000000000004",
    "accountId": "acct-alpha",
    "appType": "shopify",
    "displayName": "Demo Shop 2",
    "permissions": [
      "performance_data"
    ],
    "state": "active",
    "createdAt": "2026-01-02T08:00:00.000Z",
    "updatedAt": "2026-01-02T08:00:00.000Z"
  }
}
