tests/snapshots/output/apps__delete.snap
---
source: tests/cli/snapshots.rs
---
$ vendo apps delete a0000003-0000-4000-8000-000000000003 --yes
exit: 0
--- stdout ---
Done: App a0000003... deleted.
