tests/snapshots/output/apps__pause.snap
---
source: tests/cli/snapshots.rs
---
$ vendo apps pause a0000001-0000-4000-8000-000000000001
exit: 0
--- stdout ---
Done: App a0000001... paused.
