tests/snapshots/output/apps__pause_dry_run.snap
---
source: tests/cli/snapshots.rs
---
$ vendo apps pause a0000001-0000-4000-8000-000000000001 --dry-run
exit: 0
--- stdout ---
[dry-run] Would pause app a0000001...
